new proj/src/objects/GE_OG_Influence_Region__c.object
<CustomObject>
    <fields>
        <fullName>GE_OG_Contributing_Stakeholder_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributing Stakeholder 1</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influence Region</relationshipLabel>
        <relationshipName>Influence_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contributing_Stakeholder_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributing Stakeholder 2</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influence Regions (Contributing Stakeholder 2)</relationshipLabel>
        <relationshipName>Influence_Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Contributing_Stakeholder_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contributing Stakeholder 3</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Influence Regions (Contributing Stakeholder 3)</relationshipLabel>
        <relationshipName>Influence_Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_IR_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Influence Regions</relationshipLabel>
        <relationshipName>Influence_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Inflencing_Region_1__c</fullName>
        <label>Inflencing Region 1</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia &amp; CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-saharan Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Inflencing_Region_2__c</fullName>
        <label>Inflencing Region 2</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia &amp; CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-saharan Africa</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Inflencing_Region_3__c</fullName>
        <label>Inflencing Region 3</label>
        <picklist>
            <picklistValues>
                <fullName>Asia Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Latin America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Africa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russia &amp; CIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sub-saharan Africa</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Influencing_Manager_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencing Manager 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence_Regions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Influencing_Manager_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencing Manager 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence_Regions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Influencing_Manager_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Influencing Manager 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Influence_Regions2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_OG_Note_Influencing_Region_1__c</fullName>
        <label>Note Influencing Region 1</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Note_Influencing_Region_2__c</fullName>
        <label>Note Influencing Region 2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Note_Influencing_Region_3__c</fullName>
        <label>Note Influencing Region 3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_OG_Percentage_of_Influence_1__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percentage of Influence 1</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_Percentage_of_Influence_2__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percentage of Influence 2</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_Percentage_of_Influence_3__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Percentage of Influence 3</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>GE_OG_Stakeholder_Type_1__c</fullName>
        <label>Stakeholder Type 1</label>
        <picklist>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Stakeholder_Type_2__c</fullName>
        <label>Stakeholder Type 2</label>
        <picklist>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Stakeholder_Type_3__c</fullName>
        <label>Stakeholder Type 3</label>
        <picklist>
            <picklistValues>
                <fullName>EPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Licensor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>End user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Type_of_Influence_2__c</fullName>
        <label>Type of Influence 2</label>
        <picklist>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Type_of_Influence_3__c</fullName>
        <label>Type of Influence 3</label>
        <picklist>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GE_OG_Type_of_Influence_4__c</fullName>
        <label>Type of Influence 4</label>
        <picklist>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>GR_OG_Type_of_Influence_1__c</fullName>
        <label>Type of Influence 1</label>
        <picklist>
            <picklistValues>
                <fullName>Feed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Negotiation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relation</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <label>Influence Region</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>IR-{00000}</displayFormat>
        <label>Influence Region Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Influence Regions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Percentage_of_Influence_not_greater_100</fullName>
        <active>true</active>
        <errorConditionFormula>OR( OR(GE_OG_Percentage_of_Influence_1__c&gt;1, GE_OG_Percentage_of_Influence_2__c &gt; 1, GE_OG_Percentage_of_Influence_3__c &gt; 1, GE_OG_Percentage_of_Influence_4__c &gt; 1, GE_OG_Percentage_of_Influence_5__c &gt; 1),

(GE_OG_Percentage_of_Influence_1__c + GE_OG_Percentage_of_Influence_2__c + GE_OG_Percentage_of_Influence_3__c + GE_OG_Percentage_of_Influence_4__c + GE_OG_Percentage_of_Influence_5__c )&gt;1
)</errorConditionFormula>
        <errorMessage>&quot;Each &apos;Percentage of Influence&apos;  and Total of all &apos;Percentage of Influence&apos; should not be Greater than 100&quot;</errorMessage>
    </validationRules>
</CustomObject>